sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: illegal start of simple pattern
  while (swapped){
  ^AlgBubbleSort1:17: error: '=' expected but '}' found.
}
^